--- a/weight-tracker/src/index.css
+++ b/weight-tracker/src/index.css
@@ -7,6 +7,8 @@
   --button-hover-background-color: #2980b9;
   --input-background-color: #ffffff;
   --input-border-color: #ccc;
+  --line-color-light: #3498db;
+  --line-color-dark: #ecf0f1;
 }
 
 .dark {
@@ -18,6 +20,8 @@
   --button-hover-background-color: #3498db;
   --input-background-color: #34495e;
   --input-border-color: #555;
+  --line-color-light: #ecf0f1;
+  --line-color-dark: #3498db;
 }
 
 body {
@@ -55,20 +59,21 @@ input, select {
 }
 
 .section {
-  background: white;
+  background: var(--background-color);
   margin: 10px 0;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .dark .section {
   background: var(--sidebar-background-color);
-  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .section h2 {
   margin-top: 0;
+  color: var(--text-color);
 }
 
 .dashboard {
